<resources>
    <string name="app_name">Wio</string>
    <string name="facebook_app_id">636196369868072</string>
    <string name="server_client_id">350434064578-ntcsdur516cbg6d5vfi328mshnkcpcrg.apps.googleusercontent.com</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="Proxima_Nova_Bold">Proxima_Nova_Bold.otf</string>
    <string name="Proxima_Nova_Light">Proxima_Nova_Light.otf</string>
    <string name="Proxima_Nova_Regular">Proxima_Nova_Regular.otf</string>
    <string name="Proxima_Nova_Semibold">Proxima_Nova_Semibold.otf</string>
    <string name="ProximaNovaSoft_Medium">ProximaNovaSoft_Medium.otf</string>
    <string name="ok">OK</string>
    <string name="notification_error_ssl_cert_invalid">"You're accessing a page with an untrusted or invalid certificate. Do you want to continue?"</string>
    <string name="website_format_error">hmmm..website looks wrong..</string>
    <string name="website_format_hint">"e.g: https://wio.seeed.io or https://192.168.31.2"</string>
    <string name="hint_get_host_address">"Get your server's host address…"</string>
    <string name="loading">"loading…"</string>
    <string name="dialog_btn_tryAgain">TRY AGAIN</string>
    <string name="dialog_btn_OK">OK</string>
    <string name="dialog_btn_Cancel">Cancel</string>
    <string name="dialog_btn_FAQ">FAQ</string>
    <string name="dialog_btn_NEXT">NEXT</string>
    <string name="server_global">Global</string>
    <string name="server_old_global">Global (old)</string>
    <string name="server_chinese">Chinese</string>
    <string name="server_customize">Customize</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="server_location">Server location</string>
    <string name="forget_your_password">Forgot your password?</string>
    <string name="email_address">E-mail address</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="save">Save</string>
    <string name="online_u">ONLINE</string>
    <string name="offline_u">OFFLINE</string>
    <string name="grove_connected_number">CONNECTED</string>
    <string name="zero_device">0 Devices</string>
    <string name="devices">"Devices"</string>
    <string name="logout">Logout</string>
    <string name="next">Next</string>
    <string name="step1">Step 1</string>
    <string name="step2">Step 2</string>
    <string name="step3">Step 3</string>
    <string name="submit_u">SUBMIT</string>
    <string name="cancel">Cancel</string>
    <string name="add_your_first_device">ADD YOUR FIRST DEVICE</string>
    <string name="device_name">Device Name</string>
    <string name="data_exchange_server">Customized Server</string>
    <string name="msg_select_type_of_device">CHOOSE A DEVICE TO START</string>
    <string name="msg_email_format_error">hmmm..email address looks wrong..</string>
    <string name="msg_password_too_short_error">Password is too short (minimum is 6 characters)</string>
    <string name="msg_password_dont_match_error">Passwords don\'t match</string>
    <string name="msg_enter_wifi_password">Enter Wifi Password</string>
    <string name="msg_check_wio_is_in_config_mode">Please check if Wio device is on configuration mode, in which the blue light appears as breathing.</string>
    <string name="msg_hint_not_device">You have not connected to any device yet,get started now!</string>
    <string name="menu_grove_list">Groves</string>
    <string name="menu_support">Support</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_about">About</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_update_app">Update App</string>
    <string name="menu_view_api">View API</string>
    <string name="menu_device_setting">Device Setting</string>
    <string name="menu_change_wifi">Change Wi-Fi Network</string>
    <string name="menu_help">Help</string>
    <string name="main_screen_activity_title">Devices</string>
    <string name="select_server_activity_title">Choose a Server</string>
    <string name="step01_go_ready_activity_title_wio_link">Setup Your Wio Link</string>
    <string name="step01_go_ready_activity_title_wio_node">Setup Your Wio Node</string>
    <string name="step01_go_ready_activity_title_change_wifi">Change Wi-Fi Networks</string>
    <string name="step02_wifi_list_activity_title">Connect to Wi-Fi Network</string>
    <string name="step03_wifi_wio_list_activity_title">Connect to Wio Device</string>
    <string name="node_setting_activity_title">Device Setting</string>
    <string name="node_setting_activity_data_exchange_server_empty">Not Set</string>
    <string name="activity_sel_server_description">Simply choose your region, and Wio will recommend the fastest server for you.\nChoosing Customized Server if you plan to run your data on your own server.</string>
    <string name="dialog_edit_node_name_description">Your device is now ready!\n\nName this device if you wish.</string>
    <string name="dialog_edit_node_name_submit">Start Wio-ing</string>
    <string name="activity_node_setting_delete_device">Delete this device</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="setup_signin">Sign In</string>
    <string name="setup_signup">Sign Up</string>
    <string name="setup_switch_international">Switch to International</string>
    <string name="setup_switch_china">Switch to China</string>
    <string name="signin_email">Your Email</string>
    <string name="signin_password">Password</string>
    <string name="signin_forgot_password"><u>Forgot your password?</u></string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_verify_password">Verify Password</string>
    <string name="smartconfig_ready">Next</string>
    <string name="smartconfig_connect">Connect Your Node to Wi-Fi</string>
    <string name="smartconfig_error">Connection Failed</string>
    <string name="smartconfig_connected">Connected</string>
    <string name="smartconfig_hint_SSID">SSID:</string>
    <string name="smartconfig_hint_password">Password</string>
    <string name="smartconfig_hint_node_name">Take a name for Node</string>
    <string name="smartconfig_btn_connect">Connect</string>
    <string name="smartconfig_btn_try_again">Try Again</string>
    <string name="smartconfig_btn_play">Let\'s Play</string>
    <string name="smartconfig_tips_connect">Smart config help you to connect your\n
        IoT Node devices to Wi-Fi AP which\n
        SSID input above.
    </string>
    <string name="ap_config_tips_connect">This help you to connect your\n
        wio to Wi-Fi AP which\n
        SSID input above.
    </string>
    <string name="smartconfig_tips_failed">If you have any issue, please visit:\n
        http://seeedstudio.com.
    </string>
    <string name="smartconfig_tips_node_name">The Node\'s name help you identity it.</string>
    <string name="title_activity_test">test</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_name">New Wio name</string>
    <string name="confirm_quit">Confirm the exit</string>
    <string name="node_list_view">Nodes</string>
    <string name="grove_list_view">Groves</string>
    <string name="smartconfig_view">Smart Config</string>
    <string name="sn_key_view">Update SN/Key</string>
    <string name="about_view">About</string>
    <string name="setting_view">Setting</string>
    <string name="logout_view">Logout</string>
    <string name="title_activity_setup_iot_node">SetupIotNodeActivity</string>
    <string name="title_activity_go_ready">GoReadyActivity</string>
    <string name="about_body"><![CDATA[
        <b>Copyright 2015 <a href="http://www.seeed.cc/">Seeed Technology Co.,Ltd.</a></b><br>
        <br>
        <b><a href="http://iot.seeed.cc/privacy_policy.html">Privacy Policy</a></b><br>
        <br>
        <br>
        <b>Many thanks to these libraries and ideas:</b><br><br>
        <i><b><a href="https://github.com/JakeWharton/ViewPagerIndicator">viewpagerindicator</a></b> by Jake Wharton</i><br><br>
        <i><b><a href="https://github.com/square/retrofit">retrofit</a></b> by Square</i><br><br>
        <i><b><a href="https://github.com/EsotericSoftware/yamlbeans">yamlbeans</a></b> by EsotericSoftware</i><br><br>
        <i><b><a href="https://github.com/zxing/zxing">zxing</a></b> by zxing</i><br><br>
        <i><b><a href="https://github.com/tiagohm/MarkdownView">MarkdownView</a></b> by tiagohm</i><br><br>
        <br>
        This app is open source at <a href="https://github.com/Seeed-Studio/Wio_Link_Android_App">github</a><br>

        ]]>
    </string>
    <string name="title_about"><![CDATA[
        <b>Wio</b>&nbsp;<font color="#888888">v%1$s</font>
    ]]></string>
    <string name="ap_config_hint_node_name">set your wio name</string>
    <string-array name="server">
        <item>Default Server</item>
        <item>Custom</item>
    </string-array>
    <string name="title_ap_connect_activity">Transmitting Configuration</string>
    <string name="ap_config_progress_msg">Setting Wio name…</string>
    <string name="setting">"  Setting  "</string>
    <string name="remove">"  Remove  "</string>
    <string name="detail">"  API  "</string>
    <string name="update">Update</string>
    <string name="api">API</string>
    <string name="share_api_to">Share API url to…</string>
    <string name="ConnectServerFail">Can\'t connect server…</string>
    <string name="serverOn">Server on</string>
    <string name="change">. Change?</string>
    <string name="location_tip">Make sure that location services turned on</string>
    <string name="loading_login">Authenticating …</string>
    <string name="loading_regist">Creating Account …</string>
    <string name="reset_pwd_email">Reset your email…</string>
    <string name="reset_pwd_pwd">Reset your password…</string>
    <string name="reset_pwd_title_01">Password Recovery</string>
    <string name="cont_connection_wifi">Could not connection to Wi-Fi. Please check Wi-Fi password and try again\r\n\r\nError code:1021</string>
    <string name="cont_connection_wio_wifi">Could not connect to Wio Wi-fi hotspot, please try again or manually choose Wio\'s Wi-Fi hotspot in system settings.\r\n\r\n Error code:1031</string>
    <string name="link_to_wifi">Please connect to Wi-Fi network before you start</string>
    <string name="add_device_step01_progress_connect_server">Connect server…</string>
    <string name="add_device_step01_err_not_connect_wifi">You are not connected to Wi-fi</string>
    <string name="grove_detail">Detail</string>
    <string name="choose_server_toolbar">Choose a Server</string>
    <string name="old_server_hint"><![CDATA[This option is for users who registered with our old Global Server.<br><br> Because we are making changes our server architecture, our old Global Server will be terminated on <b><font color="#484848">September 1, 2016</font></b>. At that time, all your data will be transferred automatically to new Global Server.<br><br> We highly recommend that you use our new Global Server for your new projects.]]></string>
    <string name="choose_display_grove">Choose Display Grove</string>
    <string name="feedback_desc_hint">Tell us about your experience</string>
    <string name="feedback_email_adress">Your email address</string>
    <string name="feedback_email_format_error">hmmm..email address looks wrong..</string>
    <string name="feedback_submit_fail">Server Error. Please try again.</string>
    <string name="feedback_title">Feedback</string>
    <string name="feedback_submit">Submit</string>
</resources>