<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="5dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                style="@style/dividerLine"
                android:layout_marginTop="20dp" />

            <cc.seeed.iot.view.FontEditView
                android:id="@+id/mETEmailAddress"
                style="@style/feedbackEditStyle"
                android:layout_height="47dp"
                android:hint="@string/feedback_email_adress"
                app:cusEditFont="@string/Proxima_Nova_Light" />

            <View style="@style/dividerLine" />

            <View
                style="@style/dividerLine"
                android:layout_marginTop="14dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <EditText
                    android:id="@+id/mETDesc"
                    style="@style/feedbackEditStyle"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:hint="@string/feedback_desc_hint"
                    android:paddingTop="10dp" />

                <TextView
                    android:id="@+id/mTVFontNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:text="0/200" />
            </RelativeLayout>


            <!--   <View style="@style/dividerLine" />

               <View
                   style="@style/dividerLine"
                   android:layout_marginTop="14dp" />


               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="110dp"
                   android:background="@color/white">

                   <ImageView
                       android:id="@+id/mIVAddImg"
                       android:layout_width="77dp"
                       android:layout_height="77dp"
                       android:layout_centerVertical="true"
                       android:layout_marginLeft="15dp"
                       android:src="@mipmap/add_image" />

               </RelativeLayout>

               <View style="@style/dividerLine" />-->

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
