<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="161dp"
                android:orientation="vertical"
                android:paddingLeft="37dp"
                android:paddingRight="37dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="20dp"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/email" />
                    </LinearLayout>

                    <cc.seeed.iot.view.FontEditView
                        android:id="@+id/mEtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/email_address"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColor="#000000"
                        android:textColorHint="#FFC7C7C7"
                        android:textSize="14sp"
                        app:cusEditFont="@string/Proxima_Nova_Regular" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/password" />
                    </LinearLayout>


                    <cc.seeed.iot.view.FontEditView
                        android:id="@+id/mEtPwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="#000000"
                        android:textColorHint="#FFC7C7C7"
                        android:textSize="14sp"
                        app:cusEditFont="@string/Proxima_Nova_Regular" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"/>


                    <cc.seeed.iot.view.FontEditView
                        android:id="@+id/mEtRePwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/re_enter_password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="#000000"
                        android:textColorHint="#FFC7C7C7"
                        android:textSize="14sp"
                        app:cusEditFont="@string/Proxima_Nova_Regular" />

                </LinearLayout>

                <Button
                    android:id="@+id/mBtnRegist"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/btn_long_bg"
                    android:elevation="5dp"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:background="@drawable/shadow_down_bg"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_height="3dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <cc.seeed.iot.view.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:singleLine="true"
                    android:text="By Registering you agree to the "
                    android:textColor="#C7C7C7"
                    android:textSize="12sp"
                    app:cusTextFont="@string/Proxima_Nova_Regular" />

                <cc.seeed.iot.view.FontTextView
                    android:id="@+id/mTvPrivacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:singleLine="true"
                    android:text="Privacy Policy"
                    android:textColor="@color/apptheme_dialog_button"
                    android:textSize="12sp"
                    app:cusTextFont="@string/Proxima_Nova_Regular" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>